# eds

./: CMakeLists.txt
include/: Arena.h  Graph.h  Orientation.h  Rules.h  Tournament.h  Util.h
python/: generator.py  qtgame.py  test.py  test.txt
python/data/: G3,3_all.graph  G3,3_standard.graph  G3,4_all.graph  G3,4_standard.graph  G3,5_standard.graph  G4,4_standard.graph  K13_standard.graph  K2,2_all.graph  K2,3_all.graph  K3,3_all.graph  K4,4_all.graph  K4,4_standard.graph  T3,3_all.graph  T3,4_all.graph  T3,5_all.graph  T4,4_all.graph
src/: Arena.cpp  Graph.cpp  Orientation.cpp  PythonBinding.cpp.sav  Rules.cpp  Tournament.cpp  Util.cpp  main.cpp
